<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Мое приложение</string>
    <string name="hello">Привет!</string>
    <string name="fill_det">Заполните Свои Данные Или Продолжите Через Социальные Медиа</string>
    <string name="password">Пароль</string>
    <string name="restore">Восстановить</string>
    <string name="login">Войти</string>
    <string name="are_u_new">Вы впервые?</string>
    <string name="create">Создать пользователя</string>
    <string name="mail">Email</string>
    <string name="mailtext">xyz@gmail.com</string>
    <string name="dobropozh">ДОБРО ПОЖАЛОВАТЬ</string>
    <string name="nachat">Начать</string>
    <string name= "travel">Начнем путешествие</string>
    <string name= "next">Далее</string>
    <string name= "sila">У Вас Есть Сила, Чтобы</string>
    <string name= "home">Главная</string>
    <string name= "descript_sila">В вашей комнате много красивых и привлекательных растений</string>
    <string name= "search">Поиск</string>
    <string name="descript_travel">Умная, великолепная и модная коллекцтя Изучите сейчас</string>
    <string name= "category">Категории</string>
    <string name= "popularity">Популярное</string><string name= "sale">Акции</string>
    <string name= "all">Всё</string>
    <string name= "outdoor">Outdoor</string>
    <string name= "tennis">Tennis</string>
    <string name= "favorite">Избранное</string>
    <string name= "NikeTopShoes">Nike Top Shoes</string>
    <string name= "NewShoes">New Shoes</string>
    <string name= "NikeAirForce">Nike Air Force</string>
    <string name= "Shoes">Shoes</string>
    <string name= "SnakersNikeShoes">Snakers Nike Shoes</string>
    <string name= "RegularShoes">Regular Shoes</string>
    <string name= "MyCart">Корзина</string>
    <string name= "countTovar">3 товара</string>
    <string name= "NikeClubMax">Nike Club Max</string>
    <string name= "NikeAirMax200">Nike Air Max 200</string>
    <string name= "NikeAirMax270Essential">Nike Air Max 270 Essential</string>
    <string name= "mycartof">Оформить Заказ</string>
    <string name= "sum">Сумма</string>
    <string name= "dost">Доставка</string>
    <string name= "itogo">Итого</string>
    <string name= "SneakerShop">Sneaker Shop</string>
    <string name= "MensShoes">Men’s Shoes</string>
    <string name= "desriptionMensShoes">Вставка Max Air 270 обеспечивает непревзойденный комфорт в течение всего дня. Изящный дизайн ........</string>
    <string name= "podrobnee">Подробнее</string>
    <string name= "inmycart">В Корзину</string>
    <string name= "register">Регистрация</string>
    <string name= "descriptionRegister">Заполните Свои данные или продолжите через социальные медиа</string>
    <string name= "nameregister">Ваше имя</string>
    <string name= "Mailregister">Email</string>
    <string name= "passwordregister">Пароль</string>
    <string name= "soglasie">Даю согласие на обработку персональных данных</string>
    <string name= "account">Есть аккаунт?</string>
    <string name= "korzina">Корзина</string>
    <string name= "logIn">Войти</string>
    <string name= "podtv">Подтвердить</string>
    <string name= "forgot">Забыл Пароль?</string>
    <string name= "OTPprov">ОТР Проверка</string>
    <string name= "descriptionOTP">Пожалуйста, проверьте свою электронную почту, чтобы увидеть код подтверждения</string>
    <string name= "OTPkod">ОТР Код</string>
    <string name= "otprzanovo">Отправить заново</string>
    <string name= "push">Отправить</string>
    <string name= "regacc">Зарегистрироваться</string>
    <string name= "coontact">Контактная информация</string>
    <string name= "adresses">Адрес</string>
    <string name= "paypal">Способ оплаты</string>
    <string name= "add_pay">Добавить</string>
    <string name= "add_prim">1082 Аэропорт, Нигерии</string>
    <string name= "telephone">Телефон</string>
    <string name= "chekcart">Посмотреть на карте</string>
    <string name= "descriptionForgot">Введите Свою Учетную Запись Для Сброса</string>
    <string name="orders">Заказы</string>
    <string name="nedav">Недавний</string>
    <string name="profile">Профиль</string>
    <string name="vchera">Вчера</string>
    <string name="emmaoui">Emmanuel Oyiboke</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="emm">Emmanuel</string>
    <string name="oyi">Oyiboke</string>
    <string name="nigeria">Nigeria</string>
    <string name="edit">Изменить фото пофиля</string>
    <string name="telephone7811">+7 811-732-5298</string>
    <string name="save">Сохранить</string>
    <string name="emq">Эммануэль Кверти</string>
    <string name="pushapp">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="quit">Выйти</string>



</resources>