<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/textView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_x="136dp"
        android:layout_y="64dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textSize="80px"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="139dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_x="26dp"
        android:layout_y="265dp"
        android:background="@color/Block"
        android:ems="10"
        android:hint="@string/mailtext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="313dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="28dp"
        android:layout_y="323dp"
        android:text="@string/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="381dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="34dp"
        android:layout_y="243dp"
        android:text="@string/mail"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="294dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="328dp"
        android:layout_height="69dp"
        android:layout_x="40dp"
        android:layout_y="119dp"
        android:text="@string/fill_det"
        android:textAlignment="center"
        android:textColor="@color/SubTextDark"
        android:textSize="46px"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="289dp"
        android:layout_y="422dp"
        android:text="@string/restore"
        android:textColor="@color/SubTextDark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="289dp"
        tools:layout_editor_absoluteY="449dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_x="27dp"
        android:layout_y="345dp"
        android:background="@color/White"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="Name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="400dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_x="25dp"
        android:layout_y="464dp"
        android:text="@string/login"
        android:backgroundTint="@color/Accent"
        android:textColor="@color/Background"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="511dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="108dp"
        android:layout_height="18dp"
        android:layout_x="71dp"
        android:layout_y="653dp"
        android:text="@string/are_u_new"
        android:textColor="@color/SubTextDark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="644dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="180dp"
        android:layout_y="653dp"
        android:text="@string/create"
        android:textColor="@color/Text"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="644dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="20dp"
        android:layout_x="335dp"
        android:layout_y="337dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/img"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="341dp"
        tools:layout_editor_absoluteY="418dp" />
</AbsoluteLayout>